# Standalone-Demodulators

./: .gitignore  CMakeLists.txt  README.md
C-BPSK Demodulator/: CMakeLists.txt
C-BPSK Demodulator/src/: batch.cpp  constellation.cpp  constellation.h  dsp.cpp  dsp.h  main.cpp  utils.cpp  utils.h  window.cpp  window.h
C-BPSK Demodulator/src/dsp/: noaa_deframer.cpp  noaa_deframer.h
QPSK Demodulator/: CMakeLists.txt
QPSK Demodulator/src/: batch.cpp  constellation.cpp  constellation.h  dsp.cpp  dsp.h  main.cpp  utils.cpp  utils.h  window.cpp  window.h
QPSK Demodulator/src/dsp/: delay_one_imag.cpp  delay_one_imag.h
